--- a/app/views/call_logs/index.html.erb
+++ b/app/views/call_logs/index.html.erb
@@ -1,35 +1,20 @@
-<h1>Listing call_logs</h1>
-
+<h1>Call Logs</h1>
+<% if notice %>
+<p id="notice"><%= notice %></p>
+<% end %>
 <table>
   <tr>
-    <th>Callername</th>
-    <th>Momsage</th>
-    <th>Howheard</th>
-    <th>Wic</th>
-    <th>Ethnicity</th>
-    <th>Babyage</th>
-    <th>Wheredelivered</th>
-    <th>Howlongbf</th>
-    <th>Infohelping</th>
-    <th>Referral</th>
-    <th>Callback</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Date & Time</th>
+    <th>Number</th>
+    <th>Baby Age</th>
+    <th>Callback?</th>
   </tr>
 
 <% @call_logs.each do |call_log| %>
   <tr>
-    <td><%= call_log.callerName %></td>
-    <td><%= call_log.momsAge %></td>
-    <td><%= call_log.howHeard %></td>
-    <td><%= call_log.wic %></td>
-    <td><%= call_log.ethnicity %></td>
+    <td><%= call_log.created_at %></td>
+    <td><%= call_log.from_number %></td>
     <td><%= call_log.babyAge %></td>
-    <td><%= call_log.whereDelivered %></td>
-    <td><%= call_log.howLongBF %></td>
-    <td><%= call_log.infoHelping %></td>
-    <td><%= call_log.referral %></td>
     <td><%= call_log.callBack %></td>
     <td><%= link_to 'Show', call_log %></td>
     <td><%= link_to 'Edit', edit_call_log_path(call_log) %></td>
@@ -38,6 +23,3 @@
 <% end %>
 </table>
 
-<br />
-
-<%= link_to 'New Call log', new_call_log_path %>
